# hydrodynamic_int

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: simple_workflow.yml
doc/: test.tex
doc/tracking/: march_week1.out  march_week1.tex
examples/: obtain_SF_tensor.py  wall.ipynb
examples/example_wall/: analysis.ipynb  wall.ipynb  wall_ex.ipynb
examples/hp_diag/: HP_modes.ipynb
examples/plain_memb_diag/: PM_modes.ipynb
examples/traj/: pos_000000.txt  pos_000001.txt  pos_000002.txt  pos_000003.txt  pos_000004.txt  pos_000005.txt  pos_000006.txt  pos_000007.txt  pos_000008.txt  pos_000009.txt  pos_000010.txt  pos_000011.txt  pos_000012.txt  pos_000013.txt  pos_000014.txt  pos_000015.txt  pos_000016.txt  pos_000017.txt  pos_000018.txt  pos_000019.txt  pos_000020.txt  pos_000021.txt  pos_000022.txt  pos_000023.txt  pos_000024.txt  pos_000025.txt  pos_000026.txt  pos_000027.txt  pos_000028.txt  pos_000029.txt  pos_000030.txt  pos_000031.txt  pos_000032.txt  pos_000033.txt  pos_000034.txt  pos_000035.txt  pos_000036.txt  pos_000037.txt  pos_000038.txt  pos_000039.txt  (+60 more)
src/hydrodynamic_int/: HP_modes.ipynb  __init__.py  hessian.py  utils.py
src/particles_mod/: HalfPipe.py  PlainMembrane.py  __init__.py
test/: setup.py  test_RPY.py  test_RPY_distance.py  test_gengeom.py  test_halfpipe.py  test_hessian.py  test_partclass.py  test_particles.py  test_plainmembrane.py  test_plotter.py  test_sphgeom.py
test/examples/: SelfMobility_1.py  obtain_SF_tensor.py
test/utils/: getMobilityTensor.py
(+77 files in other folders)
