[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydrodynamic_int"
version = "0.1.0"
description = "Hydrodynamic interaction project"
authors = [
    { name = "Joan ronquillo"}
]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["hydrodynamic_int", "particles_mod"]

# Add command line entry points
[tool.poetry.scripts]
plotter = "particles_mod.plotting.plotter:main"

